cabal-version:      2.4
name:               goofy-bot
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Wiktor Czyż
maintainer:         czyz.wiktor@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable goofy-bot
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.16.4.0
      , discord-haskell ^>=1.15.3
      , unliftio ^>=0.2.24
      , text ^>=2.0.2
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:
      -Wall
